added draft branch + new article

--- a/blog_src/themes/hugolb/theme.toml
+++ b/blog_src/themes/hugolb/theme.toml
@@ -5,7 +5,7 @@ name = "Hugolb"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE.md"
 description = ""
-homepage = "http://siteforthistheme.com/"
+homepage = "https://github.com/hazrmard/hazrmard.github.io/tree/master/blog_src/themes"
 tags = ["", ""]
 features = ["", ""]
 min_version = 0.18.1
