--- a/blog_src/config.toml
+++ b/blog_src/config.toml
@@ -3,6 +3,7 @@ title = "Ibrahim Ahmed"
 languageCode = "en-us"
 theme = "hugolb"
 copyright = "Ibrahim Ahmed"
+ignoreFiles = [".+pptx$"]
 
 [params]
     splashSubheading = "I like coding, space, & games."
