--- a/themes/hugolb/theme.toml
+++ b/themes/hugolb/theme.toml
@@ -8,7 +8,7 @@ description = ""
 homepage = "https://github.com/hazrmard/hazrmard.github.io/tree/master/blog_src/themes"
 tags = ["", ""]
 features = ["", ""]
-min_version = 0.18.1
+min_version = "0.18.1"
 
 [author]
   name = "Ibrahim A"
