refactored taxonomy + special series treatment

--- a/config.toml
+++ b/config.toml
@@ -63,3 +63,7 @@ ignoreFiles = [".+pptx$"]
     tag = "tags"
     category = "categories"
     series = "series"
+
+# Blackfriday markdown rendering
+[blackfriday]
+    
