--- a/themes/hugolb/theme.toml
+++ b/themes/hugolb/theme.toml
@@ -11,5 +11,5 @@ features = ["", ""]
 min_version = "0.18.1"
 
 [author]
-  name = "Ibrahim A"
+  name = "Ibrahim Ahmed"
   homepage = "http://iahmed.me"
