--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Server",
             "type": "shell",
-            "command": "hugo.exe server -D",
+            "command": "hugo.exe server --buildDrafts --bind 0.0.0.0",
             "group": {
                 "kind": "test",
                 "isDefault": true
