aschanged config file name, added disqus

--- a/hugo.toml
+++ b/hugo.toml
@@ -78,4 +78,6 @@ ignoreFiles = [".+pptx$"]
         # so html tags inside markdown can be rendered
         unsafe = true
 
-    
+[services]
+  [services.disqus]
+    shortname = 'iahmed'
